<resources>
    <string name="app_name">Rick and Morty Wiki</string>

    <string name="try_again">Try again</string>

    <string name="service_unavailable_message">Service unavailable</string>
    <string name="no_connection_message">No connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="search_by">Search by name</string>

    <string name="alive_status">Alive</string>
    <string name="dead_status">Dead</string>
    <string name="unknown_status">Unknown</string>
    <string name="all_status">All</string>
</resources>