<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:selectAllOnFocus="true"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search_by"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_alive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alive_status"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radio_dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dead_status"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radio_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_status"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_status"
            android:layout_weight="1"/>

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_character" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <include
            android:id="@+id/errorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/layout_error"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>